<resources>
    <string name="app_name">ShoppingPOS</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="scan_item">Scan Item</string>
    <string name="offers">Offers</string>
    <string name="enter_item_name_barcode">Enter Item name/barcode</string>
    <string name="available_quantity">Available Quantity :</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="mrp">MRP:</string>
    <string name="offer_price">Offer Price :</string>
    <string name="cart">Cart</string>
    <string name="proceed_to_pay">Proceed To Pay</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="your_cart_is_empty">Your Cart is Empty.</string>
    <string name="order_details">Order Details</string>
    <string name="order_date">Order Date :</string>
    <string name="order_no">Order #:</string>
    <string name="order_total">Order Total :</string>
    <string name="order_total_quantity">Total Items :</string>
    <string name="select_payment_mode">Select Payment Mode</string>
    <string name="thank_you_msg">Thank you for Shppoing with us.\nVisit Again</string>

    <string name="home">Home</string>
    <string name="show_qr_code_on_exit">Show QR Code on Exit</string>
    <string name="shopping_pos_title">ShoppingPOS</string>
</resources>
