<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="productDetailViewModel"
            type="com.poc.shoppingpos.ui.viewmodel.ProductDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/product_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@{productDetailViewModel.productEntityObservableField.productName}"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_image" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:maxLines="3"
            android:text="@{productDetailViewModel.productEntityObservableField.productDescription}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_name" />


        <RelativeLayout
            android:id="@+id/product_rate_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_description">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/mrp_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text="@{@string/product_price(productDetailViewModel.productEntityObservableField.mrp)}" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/product_offer_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_rate_layout">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/offer_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:maxLines="1"
                android:text="@{@string/selling_price(productDetailViewModel.productEntityObservableField.sellingPrice)}" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/product_quantity_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_offer_layout">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/avl_quantity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:maxLines="1"
                android:text="@{@string/avl_quantity(productDetailViewModel.productEntityObservableField.avlQuantity)}" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:padding="10dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_quantity_layout">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/minus_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/plus_buttonshape"
                android:text="@string/minus"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/quantity_count_tv"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@+id/minus_btn"
                android:gravity="center"
                android:text="0"
                android:textSize="18sp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/plus_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_toEndOf="@+id/quantity_count_tv"
                android:background="@drawable/plus_buttonshape"
                android:text="@string/plus"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_to_cart_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/add_to_cart"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>